--- a/src/components/Navigation/Navigation.module.css
+++ b/src/components/Navigation/Navigation.module.css
@@ -6,5 +6,9 @@
   color: #2a363b;
 }
 .activeLink {
+  display: inline-block;
+  text-decoration: none;
+  padding: 12;
+  font-weight: 700;
   color: #e84a5f;
 }
