--- a/src/components/Container/Container.module.css
+++ b/src/components/Container/Container.module.css
@@ -1,7 +1,8 @@
 .container {
   max-width: 600px;
+  min-height: 100vh;
   margin-left: auto;
   margin-right: auto;
-  padding: 50px;
+  padding: 50px 100px;
   background-color: #ddd;
 }
