--- a/src/components/Navigation/Navigation.module.css
+++ b/src/components/Navigation/Navigation.module.css
@@ -1,14 +1,17 @@
 .link {
-  display: inline-block;
+  display: block;
   text-decoration: none;
-  padding: 12;
+  padding: 12px;
   font-weight: 700;
   color: #2a363b;
 }
 .activeLink {
-  display: inline-block;
+  display: block;
   text-decoration: none;
-  padding: 12;
+  padding: 12px;
   font-weight: 700;
   color: #e84a5f;
+}
+.nav {
+  display: flex;
 }
