--- a/src/components/AppBar/AppBar.module.css
+++ b/src/components/AppBar/AppBar.module.css
@@ -2,5 +2,8 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
+  height: 44px;
+  padding-bottom: 10px;
+  margin-bottom: 40px;
   border-bottom: 2px solid #2a363b;
 }
