--- a/src/components/Contact/Contact.module.css
+++ b/src/components/Contact/Contact.module.css
@@ -1,10 +1,11 @@
 .item {
   display: grid;
   width: 100%;
-  grid-template-columns: 1fr 1fr 1fr;
+  grid-template-columns: 2fr 2fr 1fr 1fr;
   padding-top: 10px;
 }
 
 .button {
-  margin: 0 auto;
+  min-width: 55px;
+  margin: 0 0 0 auto;
 }
