--- a/src/components/Filter/Filter.module.css
+++ b/src/components/Filter/Filter.module.css
@@ -2,3 +2,8 @@
   padding-bottom: 11px;
   border-bottom: 2px solid #2a363b;
 }
+
+.inputField {
+  background-color: rgb(239, 239, 239);
+  padding: 0px;
+}
