--- a/src/components/Form/Form.module.css
+++ b/src/components/Form/Form.module.css
@@ -1,14 +1,17 @@
 .form {
   display: grid;
   width: 100%;
-  grid-template-columns: 1fr 1fr 1fr;
+  grid-template-columns: 5fr 5fr 2fr;
   border-bottom: 2px solid #2a363b;
 }
 .button {
   display: block;
-  margin-top: 19px;
+  height: 22px;
+  margin-top: 27px;
+  min-width: 55px;
 }
 
-.p {
-  margin-top: 0;
+.inputField {
+  background-color: rgb(239, 239, 239);
+  padding: 0px;
 }
